--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button onclick="addPoints('home',3)">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                   <span id="guest">0</span>
                 <button onclick="addPoints('guest',1)">+1</button>
                 <button onclick="addPoints('guest',2)">+2</button>
